2005/04/07	kaffeetisch

	* xs/GdkDrawable.xs: Update a FIXME comment.

	* t/GtkAccelMap.t, xs/GtkAccelMap.xs: Bind and test
	gtk_accel_map_get, gtk_accel_map_lock_path,
	gtk_accel_map_unlock_path.

	* t/GtkAction.t, xs/GtkAction.xs: Bind and test
	gtk_action_get_accel_path.

	* t/GtkIconView.t, xs/GtkIconView.xs: Bind and test
	gtk_icon_view_set_columns, gtk_icon_view_get_columns,
	gtk_icon_view_set_item_width, gtk_icon_view_get_item_width,
	gtk_icon_view_set_spacing, gtk_icon_view_get_spacing,
	gtk_icon_view_set_row_spacing, gtk_icon_view_get_row_spacing,
	gtk_icon_view_set_column_spacing,
	gtk_icon_view_get_column_spacing, gtk_icon_view_set_margin,
	gtk_icon_view_get_margin.  Also add a copyright disclaimer to
	GtkIconView.xs.

	* t/GtkPaned.t, xs/GtkPaned.xs: Add and test get_child1 and
	get_child2 aliases to the existing child1 and child2 accessors.

2005/04/04	muppetman

	* xs/GtkStyle.xs, t/GtkStyle.t: turn Gtk2::Style::bg_pixmap
	into a mutator.

	* xs/GtkDnd.xs, t/GtkDnd.t: allow undef for the mask parameter
	to gtk_drag_set_icon_pixmap(), with tests.

2005/04/02	muppetman

	A examples/draw_text.pl
	M MANIFEST
	Add a new example.

2005/04/02	kaffeetisch

	* MANIFEST, maps-2.4, maps-2.6, maps_pango-1.8, xs_files-2.0,
	xs_files-2.6, gtk-demo/main.pl, gtk-demo/rotated_text.pl,
	t/GdkPango.t, t/PangoRenderer.t, xs/GdkPango.xs,
	xs/PangoRenderer.xs: Add initial bindings and tests for
	PangoRenderer and GtkPango.  Also add muppet's rotated text
	example.

2005/03/25	kaffeetisch

	* CodeGen.pm: Make the GEnum and GFlags converters cast their
	return values to the correct type to fix compilation when using a
	C++ compiler.

2005/03/07	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
	1.080.

2005/03/07	kaffeetisch

	* t/GtkFileChooser.t: Temporarily mark a failing test as TODO.

2005/02/28	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/28	kaffeetisch
