@@ -1,3 +1,8 @@
+2005/04/08	rmcfarla
+
+	* xs/GtkNotebook.xs: added pod comments to functions that now return 
+	integers saying this is new as of Gtk2-Perl 1.080.
+
 2005/04/07	kaffeetisch
 
 	* xs/GdkDrawable.xs: Update a FIXME comment.
